--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
          <div class="section">
            <img src="/staab.png" class="rounded" width="100px" height="100px" />
            <p>
-             I am a professional software developer with ten years of experience, with a passion
-             for bitcoin. I have spent hundreds of hours reading about bitcoin and playing with the
-             tech — from hardware wallets, to lightning channel management, I've seen it all.
+             I am a professional software developer with a passion for bitcoin. I have spent
+             hundreds of hours reading about bitcoin and playing with the tech — from hardware
+             wallets, to lightning channel management, I've seen it all.
            </p>
          </div>
          <div class="section action">
